--- a/index.html
+++ b/index.html
@@ -106,5 +106,8 @@
         </form>
         <button>call to action</button>
     </section>
+    <footer id="main-footer">
+        <p>Headset Website &copy; 2024, All RIghts Reserved</p>
+      </footer>
 </body>
 </html>
